# syncpack

./: .babelrc  .codeclimate.yml  .cursorrules  .env.darwin-arm64  .env.darwin-x64  .env.linux-arm64-glibc  .env.linux-arm64-musl  .env.linux-x64-glibc  .env.linux-x64-musl  .env.win32-arm64-msvc  .env.win32-x64-msvc  .eslintrc.js  .gitignore  .mailmap  .npmrc  .prettierignore  .prettierrc  .release-it.json  .syncpackrc  .syncpackrc.js  .syncpackrc.json  .travis.yml  404.html  AGENTS.md  BingSiteAuth.xml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEPENDENCIES.md  LICENSE  NPM_SPECIFIER_SPECIFICATION.md  README.md  SPECIFIER_GAPS.md  SPECIFIER_REFACTOR.md  SPECIFIER_REFACTOR_PHASE2.md  bench.sh  biome.json  blog.html  (+58 more)
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  README_CONTENT.md
.notes/: case-study-specifier2-migration.md  context.md  context7-guide.md  decision-trees.md  diagrams.md  index.md  patterns.md  plan-maintenance.md  quick-reference.md  search-tips.md  specifier-guide.md
.zed/: settings.json  tasks.json
_astro/: Search.astro_astro_type_script_index_0_lang.Dr7E78W_.js  ec.0epgx.css  ec.g0xin.css  ec.pwai7.css  ec.qopfj.js  faq.8O_ycQTA.css  faq.B3Tdtdk2.css  faq.BTHWiA1F.css  faq.BTbJdZ_p.css  faq.C6yEMv8y.css  faq.CKndwMb7.css  faq.CN-aDPji.css  faq.CaAGVCeQ.css  faq.D2PkbIFq.css  faq.D3ztQMw_.css  faq.DDJArRtW.css  faq.DTIZXeZG.css  faq.Db6GZlhM.css  faq.Dd1AutBV.css  faq.DkpKv7iC.css  faq.LoEUPVLL.css  faq.ZqSVBcwp.css  faq.m2L-jHWp.css  hoisted.65ed1043.js  hoisted.732d122a.js  hoisted.CAe53g1-.js  hoisted.Cop2EQXM.js  hoisted.DV5bAPk6.js  hoisted.I47eohod.js  hoisted.MkDXY7KR.js  hoisted.Y325uud6.js  hoisted.b968f1f2.js  index.75b58874.css  index.9XQDJS85.css  index.Jirxc201.css  index.Lkrw-iWI.css  index.c874b2f0.css  index.ce8664b1.css  index.de5d4292.css  page.36aCzv65.js  (+10 more)
blog/: archive.html  atom.xml  first-blog-post.html  index.html  long-blog-post.html  mdx-blog-post.html  rss.xml  tags.html  welcome.html
command/: fix-mismatches.html  format.html  index.html  lint-semver-ranges.html  lint.html  list-mismatches.html  list.html  prompt.html  set-semver-ranges.html  update.html
config/: custom-types.html  dependency-types.html  filter.html  indent.html  index.html  semver-groups.html  semver-range.html  sort-az.html  sort-first.html  source.html  syncpackrc.html  version-groups.html
crates/syncpack-specifier/: Cargo.toml
crates/syncpack-specifier/benches/: specifier_parsing.rs
crates/syncpack-specifier/src/: eq_hash_test.rs  git.rs  is_eligible_update_for_test.rs  latest.rs  lib.rs  major.rs  minor.rs  new_test.rs  parser.rs  range.rs  range_major.rs  range_minor.rs  satisfies_all_test.rs  test_faker.rs  update_target.rs  update_target_test.rs  with_range_test.rs  workspace_protocol.rs  workspace_specifier.rs
dependency-types/: index.html
docs/: intro.html
examples/: ban-dependency-from-monorepo.html  ensure-versions-satisfy-same-range.html  fix-aws-sdk-version-mismatch.html  fix-react-native-version-mismatch.html  ignore-dependencies-in-syncpack.html  index.html  only-allow-types-in-dev-dependencies.html  pnpm-workspace-protocol.html  sync-engines-in-monorepo.html  sync-nodejs-version-in-monorepo.html  sync-package-manager-version.html
faq/: index.html
glossary/: index.html
guide/: getting-started.html  index.html  local-package-versions.html  semver-groups.html  troubleshooting.html  version-groups.html
integrations/: github-actions.html  intellisense.html  json-schema.html  lerna.html  npm.html  pnpm.html  yarn.html
npm/: index.cjs  index.js  syncpack.ts
option/: config.html  filter.html  indent.html  semver-range.html  source.html  types.html
pagefind/: pagefind-entry.json  pagefind.en-gb_1127bc277d931.pf_meta  pagefind.en-gb_30d7a84f74479.pf_meta  pagefind.en-gb_465943aea7166.pf_meta  pagefind.en-gb_7cbd578052d61.pf_meta  pagefind.en-gb_84a323761e4dd.pf_meta  pagefind.en-gb_92f67f1c8e493.pf_meta  pagefind.en_10af535b8f.pf_meta  pagefind.en_139e9358c9.pf_meta  pagefind.en_15b8fcb801.pf_meta  pagefind.en_2494fa87d1.pf_meta  pagefind.en_2a28dddf7a.pf_meta  pagefind.en_35287ecde2.pf_meta  pagefind.en_374699eeab.pf_meta  pagefind.en_3c1a20f342.pf_meta  pagefind.en_422bb91fbe.pf_meta  pagefind.en_49ff9435e4.pf_meta  pagefind.en_4be4dfdd87.pf_meta  pagefind.en_4d7973c846.pf_meta  pagefind.en_589f1d1e1d.pf_meta  pagefind.en_68f48510f6.pf_meta  pagefind.en_6c9420af1b.pf_meta  pagefind.en_70e642e97b.pf_meta  pagefind.en_73a5e58d63.pf_meta  pagefind.en_7668ce130a.pf_meta  pagefind.en_79a3c59377.pf_meta  pagefind.en_7aa808e76a.pf_meta  pagefind.en_7c21d9aebf.pf_meta  pagefind.en_8099f0b4e4.pf_meta  pagefind.en_81143323d3.pf_meta  pagefind.en_8359c451f8.pf_meta  pagefind.en_924f3dcc63.pf_meta  pagefind.en_951d398eb0.pf_meta  pagefind.en_97b08ef645.pf_meta  pagefind.en_9a4efc8fa3.pf_meta  pagefind.en_9c73f09f51.pf_meta  pagefind.en_a7daa1fa31.pf_meta  pagefind.en_a7f7db1df9.pf_meta  pagefind.en_af772fd0e5.pf_meta  pagefind.en_b4681c794e.pf_meta  (+26 more)
reference/: index.html
scripts/: check-engines.mjs  update-fixtures.sh  upsert-test.sh
semver-groups/: index.html
site/: .env  README.md  astro.config.mjs  docusaurus.config.js  package-lock.json  package.json  pnpm-lock.yaml  sidebars.js  tsconfig.json
specifier-types/: index.html
src/: bin-copy-values.js  bin-fix-mismatches.ts  bin-format.ts  bin-lint-semver-ranges.ts  bin-list-mismatches.ts  bin-list.ts  bin-set-semver-ranges.ts  bin-sync-versions.js  bin.js  bin.ts  catalogs.rs  catalogs_test.rs  cli.rs  cli_test.rs  commands.rs  config.rs  constants.js  constants.ts  context.rs  context_test.rs  copy-values.js  dependency.rs  dependency_test.rs  dependency_type.rs  disk.rs  disk_test.rs  effects.rs  errors.rs  file_paths.rs  files.spec.ts  files.ts  fix-mismatches.spec.ts  fix-mismatches.ts  format.rs  format.spec.ts  format.ts  format_test.rs  group_selector.rs  index.js  index.ts  (+54 more)
test/: mock.ts  (+10 more)
(+3488 files in other folders)
