[package]
name = "syncpack"
version = "14.0.0-alpha.41"
authors = ["Jamie Mason <jamie@foldleft.io>"]
edition = "2021"
homepage = "https://syncpack.dev"
repository = "https://github.com/JamieMason/syncpack/tree/rust/main"
description = "Consistent dependency versions in large JavaScript Monorepos"
license = "MIT"
keywords = ["monorepo", "npm", "pnpm", "semver", "turborepo"]
readme = "./README.md"
include = ["src/**/*.rs"]

[dev-dependencies]
ctor = "0.6.3"

[dependencies]
async-trait = "0.1.89"
clap = { version = "4.5.58", features = ["cargo"] }
color-print = "0.3.7"
colored = "3.1.1"
env_logger = "0.11.9"
glob = "0.3.3"
globset = "0.4.18"
indicatif = "0.18.4"
itertools = "0.14.0"
lazy_static = "1.5.0"
log = "0.4.29"
node-semver = "2.2.0"
regex = { version = "1.12.3", default-features = false, features = ["std"] }
reqwest = { version = "0.12", features = [
  "json",
  "rustls-tls",
], default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149", features = ["preserve_order"] }
serde_yaml = "0.9"
thiserror = "2.0.18"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }

[features]
default = []

[profile.release]
codegen-units = 1 # Reduce number of codegen units to increase optimisations
debug = false     # Remove debug information
lto = true        # Enable Link Time Optimisation
opt-level = "z"   # Optimise for size rather than speed
panic = "abort"   # Abort on panic rather than unwinding
strip = true      # Strip symbols from binary
