[package]
name = "syncpack-specifier"
version = "14.3.0"
authors = ["Jamie Mason <jamie@foldleft.io>"]
edition = "2021"
description = "npm version specifier parser and comparator"
license = "MIT"

[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports"] }
ctor = "0.6.3"

[[bench]]
name = "specifier_parsing"
harness = false

[dependencies]
log = "0.4.29"
node-semver = "2.2.0"
