[package]
name = "syncpack-specifier"
version = "15.2.0"
authors = ["Jamie Mason <jamie@foldleft.io>"]
edition = "2024"
description = "npm version specifier parser and comparator"
license = "MIT"

[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports"] }

[[bench]]
name = "specifier_parsing"
harness = false

[dependencies]
node-semver = "2.2.0"
